Added slide in animations to emerger

--- a/content/Alloy/Animation/index.hbs
+++ b/content/Alloy/Animation/index.hbs
@@ -122,8 +122,18 @@ js-animations: true
 				        	</div>
 				        	<div class="c__lg--1-3">
 				        		<p>We want to be able to bring in an element, and then have the items within that element transition in nicely...</p>
-				        		<a href="#" class="button example__fade--default">See horizontal</a>
-				        		<a href="#" class="button example__fade--random">See random</a>
+				        		<a href="#" class="button example__fade--default">Horizontal</a>
+				        		<a href="#" class="button example__fade--random">Random</a>
+				        		<a href="#" class="button example__fade--pop">Horizontal Pop</a>
+				        		<a href="#" class="button example__fade--randpop">Random Pop</a>
+								<a href="#" class="button example__slide--left">Slide Left</a>
+								<a href="#" class="button example__slide--right">Slide Right</a>
+								<a href="#" class="button example__slide--up">Slide Up</a>
+								<a href="#" class="button example__slide--down">Slide Down</a>
+								<a href="#" class="button example__slide--leftrandom">Slide Left Random</a>
+								<a href="#" class="button example__slide--rightrandom">Slide Right Random</a>
+								<a href="#" class="button example__slide--uprandom">Slide Up Random</a>
+								<a href="#" class="button example__slide--downrandom">Slide Down Random</a>
 			        		</div>
 				        </div>
 
@@ -157,104 +167,30 @@ js-animations: true
 					        		<div class="emerging"></div>
 					        		<div class="emerging"></div>
 					        		<div class="emerging"></div>
-				        		</div>
-				        	</div>
-				        	<div class="c__lg--1-3">
-				        		<p>These methods are based upon the idea that there are multiple rows and columns of elements being displayed, and that there is the same number of elements across a column.</p>
-				        		<a href="#" class="button example__fade--diagonal">See diagonal</a>
-				        		<a href="#" class="button example__fade--vertical">See vertical</a>
-				        		<a href="#" class="button example__fade--verticalchain">See vertical chain</a>
-			        		</div>
-				        </div>
-
-			        </div>
-
-		        </section>
-
-				<section class="section section--example">
-		            <header class="section__head">
-		                <h2 class="section__title">Emerger - Effects</h2>
-		            </header>
-
-		            <div class="section__body">
-
-				        <div class="g">
-				        	<div class="c__lg--2-3">
-					        	<div class="animexample example--emerger-effects">
-					        		<div class="emerging"></div>
-					        		<div class="emerging"></div>
-					        		<div class="emerging emerging--wide"></div>
-					        		<div class="emerging"></div>
-					        		<div class="emerging emerging--narrow"></div>
-					        		<div class="emerging emerging--narrow"></div>
-					        		<div class="emerging"></div>
-					        		<div class="emerging"></div>
-					        		<div class="emerging emerging--wide"></div>
-					        		<div class="emerging emerging--wide"></div>
-					        		<div class="emerging"></div>
-					        		<div class="emerging"></div>
-					        		<div class="emerging emerging--narrow"></div>
-					        		<div class="emerging emerging--wide"></div>
 					        		<div class="emerging"></div>
 					        		<div class="emerging"></div>
 					        		<div class="emerging"></div>
 				        		</div>
 				        	</div>
 				        	<div class="c__lg--1-3">
-				        		<p>There is more to emerging that just changing the opacity!</p>
-				        		<a href="#" class="button example__fade--pop">Horizontal Pop</a>
-				        		<a href="#" class="button example__fade--randpop">Random Pop</a>
-				        		<a href="#" class="button example__fade--slide">Horizontal Slide</a>
-				        		<a href="#" class="button example__fade--randslide">Random Slide</a>
-			        		</div>
-				        </div>
-
-			        </div>
-		        </section>
-
-				<section class="section section--moreeffects">
-		            <header class="section__head">
-		                <h2 class="section__title">Emerger - More Effects</h2>
-		            </header>
-
-		            <div class="section__body">
-
-				        <div class="g">
-				        	<div class="c__lg--2-3">
-					        	<div class="animexample example--emerger-moreeffects">
-					        		<div class="emerging"></div>
-					        		<div class="emerging"></div>
-					        		<div class="emerging"></div>
-					        		<div class="emerging"></div>
-					        		<div class="emerging"></div>
-					        		<div class="emerging"></div>
-					        		<div class="emerging"></div>
-					        		<div class="emerging"></div>
-					        		<div class="emerging"></div>
-					        		<div class="emerging"></div>
-					        		<div class="emerging"></div>
-					        		<div class="emerging"></div>
-					        		<div class="emerging"></div>
-					        		<div class="emerging"></div>
-					        		<div class="emerging"></div>
-					        		<div class="emerging"></div>
-					        		<div class="emerging"></div>
-					        		<div class="emerging"></div>
-					        		<div class="emerging"></div>
-					        		<div class="emerging"></div>
-				        		</div>
-				        	</div>
-				        	<div class="c__lg--1-3">
-				        		<a href="#" class="button example__deal--default">Deal</a>
-				        		<a href="#" class="button example__deal--random">Deal Random Order</a>
-				        		<a href="#" class="button example__deal--verticalchain">Deal Vertical Chain</a>
+				        		<p>
+				        			These methods are based upon the idea that there are multiple rows and columns of elements being displayed, and that there is the same number of elements across a column.
+				        			<br />
+					        		<a href="#" class="button example__fade--diagonal">Diagonal</a>
+					        		<a href="#" class="button example__fade--vertical">Vertical</a>
+					        		<a href="#" class="button example__fade--verticalchain">Vertical chain</a>
+					        		The deal effect works best if the cards are all of the same size (as a deck of cards would be).
+					        		<br />
+					        		<a href="#" class="button example__deal--default">Deal</a>
+					        		<a href="#" class="button example__deal--random">Deal Random Order</a>
+					        		<a href="#" class="button example__deal--verticalchain">Deal Vertical Chain</a>
+				        		</p>
 			        		</div>
 				        </div>
 
 			        </div>
 
 		        </section>
-
 
 				<section class="section section--fancyaccordion">
 		            <header class="section__head">
