--- a/assets/less/base_modules/ie.less
+++ b/assets/less/base_modules/ie.less
@@ -5,9 +5,14 @@
 // IE8
 // ----------------------------------------------------
 
-// .ie8 {
+.ie8 {
 
-// }
+	// Elements which use translate to centre vertically
+	.banner__foreground {
+		top: 0;
+	}
+
+}
 
 // IE9
 // ----------------------------------------------------
