--- a/assets/less/base_modules/label.less
+++ b/assets/less/base_modules/label.less
@@ -39,7 +39,6 @@
 
 }
 
-
 // STATUSES
 // ----------------------------------------------------
 
@@ -78,8 +77,6 @@
 // SIZES
 // ----------------------------------------------------
 
-
-
 // MOBILE
 // ----------------------------------------------------
 
@@ -88,7 +85,7 @@
 
 }
 
-// TABLET & UP
+// TABLET+
 // ----------------------------------------------------
 
 @media only screen and (min-width: @MQ-Medium-min) {
