--- a/assets/less/main.less
+++ b/assets/less/main.less
@@ -15,6 +15,7 @@
 @import "base_modules/alert.less";
 @import "base_modules/article.less";
 @import "base_modules/banner.less";
+@import "base_modules/blurMask.less";
 @import "base_modules/box.less";
 @import "base_modules/breadcrumbs.less";
 @import "base_modules/browsehappy.less";
