--- a/assets/less/modules/STARTUP.less
+++ b/assets/less/modules/STARTUP.less
@@ -21,7 +21,7 @@
 
 }
 
-// TABLET & UP
+// TABLET+
 // ----------------------------------------------------
 
 @media only screen and (min-width: @MQ-Medium-min) {
