--- a/assets/less/base/css3.less
+++ b/assets/less/base/css3.less
@@ -268,20 +268,24 @@
     background-color: @alphaColour; 
 }
 
-// OVERLAY
+._background-size (@size: cover) {
+    background-size: @size;
+    -ms-behavior: url('/assets/handlers/backgroundsize.min.htc');
+}
+
+// OVERLAY (doesn't work in IE8 yet)
 // ----------------------------------------------------
 
-._overlay (@color: rgba(0, 0, 0, 0.5)) {
+._overlay (@color: @COLOR-Black, @alpha: 0.5) {
     position: relative;
 
     &:before {
-        background-color: @color;
+        content: "";
         position: absolute;
         top: 0;
         left: 0;
         width: 100%;
         height: 100%;
-        display: block;
-        content: "";
+        ._background-color (@color, @alpha);
     }
 }
