--- a/assets/less/base_modules/article.less
+++ b/assets/less/base_modules/article.less
@@ -110,7 +110,7 @@
 
 }
 
-// TABLET & UP
+// TABLET+
 // ----------------------------------------------------
 
 @media only screen and (min-width: @MQ-Medium-min) {
