--- a/assets/less/base_modules/badge.less
+++ b/assets/less/base_modules/badge.less
@@ -104,11 +104,8 @@
     }
 }
 
-
 // SIZES
 // ----------------------------------------------------
-
-
 
 // MOBILE
 // ----------------------------------------------------
@@ -118,7 +115,7 @@
 
 }
 
-// TABLET & UP
+// TABLET+
 // ----------------------------------------------------
 
 @media only screen and (min-width: @MQ-Medium-min) {
