--- a/assets/less/base_modules/banner.less
+++ b/assets/less/base_modules/banner.less
@@ -9,34 +9,30 @@
 // ----------------------------------------------------
 
 @BANNER-Color:                  @COLOR-White;
-@BANNER-Overlay:                rgba(0, 0, 0, 0.5);
+@BANNER-Height:                 400px;
+@BANNER-Indent:                 10%;
+@BANNER-BgPosition:             center;
 
 // BADGE BASE
 // ----------------------------------------------------
 
 .banner {
-    background-size: cover;
-    background-position: 50% 50%;
+    background-position: @BANNER-BgPosition;
     position: relative;
-
-    -ms-behavior: url('/assets/handlers/backgroundsize.min.htc');
-}
-
-.banner__overlay {
-    background-color: @BANNER-Overlay;
-    position: absolute;
-    width: 100%;
-    height: 100%;
+    ._background-size();
 }
 
 .banner__content {
     color: @BANNER-Color;
     position: relative;
+    height: 100%;
+    ._background-color (@COLOR-Black, 0.5);
     ._text-shadow();
 }
 
 .banner__foreground {
     text-align: center;
+    position: relative;
     ._padding (10);
 }
 
@@ -72,34 +68,28 @@
 @media only screen and (max-width: @MQ-Small) {
 
     .banner {
-    }
-
-    .banner__content {
-        ._padding-top (44);
-    }
-
-    .banner__image {
-        display: none;
+        ._margin-top (44);
     }
 
 }
 
-// TABLET & UP
+// TABLET+
 // ----------------------------------------------------
 
 @media only screen and (min-width: @MQ-Medium-min) {
 
     .banner {
-        height: 400px;
+        height: @BANNER-Height;
     }
 
     .banner__content {
-        top: 50%;
+        width: @BANNER-Height;
+        left: @BANNER-Indent;
     }
 
     .banner__foreground {
-        max-width: 700px;
-        margin: 0 auto;
+        top: 50%;
+        max-width: @BANNER-Height*2;
         ._translate-y (-50%);
     }
 
