--- a/assets/less/base_modules/button.less
+++ b/assets/less/base_modules/button.less
@@ -302,7 +302,7 @@
 
 }
 
-// TABLET & UP
+// TABLET+
 // ----------------------------------------------------
 
 @media only screen and (min-width: @MQ-Medium-min) { 
