--- a/assets/less/base_modules/tabs.less
+++ b/assets/less/base_modules/tabs.less
@@ -91,7 +91,7 @@
 
 }
 
-// TABLET & UP
+// TABLET+
 // ----------------------------------------------------
 
 @media only screen and (min-width: @MQ-Medium-min) {
