--- a/assets/less/base_modules/wrap.less
+++ b/assets/less/base_modules/wrap.less
@@ -21,7 +21,7 @@
 
 }
 
-// TABLET & UP
+// TABLET
 // ----------------------------------------------------
 
 @media only screen and (min-width: @MQ-Medium-min) and (max-width: @MQ-Medium) {
