--- a/content/Alloy/Components/banners.hbs
+++ b/content/Alloy/Components/banners.hbs
@@ -7,6 +7,7 @@ nav-title: "Banners"
 nav-text: "Banners"
 nav-variant: "banners"
 page-category: "components"
+js-banner: true
 ---
 	
 {{> banner banner }}
