--- a/content/Alloy/Components/parallax.hbs
+++ b/content/Alloy/Components/parallax.hbs
@@ -33,13 +33,13 @@ js-parallax: true
 
 					<div class="section__body">
 
-						<div class="parallax" style="background-image: url('/assets/img/banner-welcome.png'); height: 400px;"></div>
+						<div class="parallax" style="background-image: url('/assets/img/bg.jpg'); height: 400px; background-size: 100% auto;"></div>
 
-						<div class="parallax" data-options='{"speed": -0.25, "start": -200}' style="background-image: url('/assets/img/banner-welcome.png'); height: 400px; margin-top: 20px;"></div>
+						<div class="parallax" data-options='{"speed": -0.5, "start": -400}' style="background-image: url('/assets/img/bg.jpg'); height: 400px; margin-top: 20px; background-size: 100% auto;"></div>
 
-						<div class="parallax" data-options='{"speed": -0.5, "start": -200}' style="background-image: url('/assets/img/banner-welcome.png'); height: 400px; margin-top: 20px;"></div>
+						<div class="parallax" data-options='{"speed": -1.5, "start": -200}' style="background-image: url('/assets/img/bg.jpg'); height: 400px; margin-top: 20px; background-size: 100% auto;"></div>
 
-						<div class="parallax" data-options='{"speed": 0.5, "start": 0}' style="background-image: url('/assets/img/banner-welcome.png'); height: 400px; margin-top: 20px;"></div>
+						<div class="parallax" data-options='{"speed": 1.5, "start": 0}' style="background-image: url('/assets/img/bg.jpg'); height: 400px; margin-top: 20px; background-size: 100% auto;"></div>
 
 					</div>
 
