Updated alloy logo and fixed navigation

--- a/assets/less/base/_variables.less
+++ b/assets/less/base/_variables.less
@@ -129,7 +129,7 @@
 @COLOR-GreyDarker:				#324156;
 @COLOR-GreyDarkest:				#1D2C41;
 
-@COLOR-Base:                    @COLOR-Blue;
+@COLOR-Base:                    #4677AE;
 
 // ANNIMATION CURVES
 // ----------------------------------------------------
@@ -179,7 +179,7 @@
 @TYPE-SIZE-Beta:                28;
 @TYPE-SIZE-Gamma:               20;
 @TYPE-SIZE-Delta:               18;
-@TYPE-SIZE-Epsilon:             16;
+@TYPE-SIZE-Epsilon:             @TYPE-FontSize;
 @TYPE-SIZE-Zeta:                15;
 @TYPE-SIZE-Eta:                 14;
 @TYPE-SIZE-Iota:                12;
