--- a/assets/less/fontloader.less
+++ b/assets/less/fontloader.less
@@ -82,7 +82,8 @@
     //figcaption,
 	.panel__title,
 	.list__nav,
-    .banner__title {
+    .banner__title,
+    .mainnav {
 		font-family: @FONTLOADER-HeadingsFontFamily;
 	}
 }
