--- a/content/_partials/ALLOY_debug.hbs
+++ b/content/_partials/ALLOY_debug.hbs
@@ -1,5 +1,5 @@
 <div class="debugger">
-    <div class="debugger__head"><em>Debugger</em><a href="#" class="debugger__toggle right" title="Toggle Debugger" data-accordionindex="#debugger">&#8225;</a></div>
+    <div class="debugger__head"><em>Debugger</em><a href="#" class="debugger__toggle right" title="Toggle Debugger" data-accordionindex="#debugger"><i class="icon icon--downwards"></i></a></div>
     <div class="debugger__body" id="debugger">
         <ul class="list list__debugger"></ul>
     </div>
