--- a/content/_partials/ALLOY_header.hbs
+++ b/content/_partials/ALLOY_header.hbs
@@ -1,8 +1,8 @@
 <header id="header" role="banner" class="w w--head">
 	<div class="g g--nogutter">
 		<div class="c__lg--1">
-			<a href="/" class="logo" title="Alloy"><img src="/assets/img/logo-header.png" class="logo__image" alt="Alloy" /></a>
-			<a class="button__mobile button__mobile--navigation"><span></span></a>
+			<a href="/" class="logo" title="alloy"><img src="/assets/img/logo-header.png" class="logo__image" alt="alloy logo" /></a>
+			<a class="button__mobile button__mobile--mainnav"><span></span></a>
 			<a class="button__totop"><i class="icon icon--up176"></i></a>
 		</div>
 	</div>
