Changed to compatible assemble version plus a few minor tweaks

--- a/assets/less/base_modules/links.less
+++ b/assets/less/base_modules/links.less
@@ -6,8 +6,8 @@
 // ----------------------------------------------------
 
 @LINK-Link:                     @COLOR-Base;
-@LINK-Visited:                  lighten(@LINK-Link, 10);
-@LINK-Hover:                    darken(@LINK-Link, 10);
+@LINK-Visited:                  @LINK-Link;
+@LINK-Hover:                    @LINK-Link;
 @LINK-Active:                   darken(@LINK-Link, 20);
 @LINK-Focus:                    darken(@LINK-Link, 40);
 
