--- a/assets/less/base_modules/ink.less
+++ b/assets/less/base_modules/ink.less
@@ -1,12 +1,17 @@
+/* =========================================================================
+// INK
+// =======================================================================*/
+
 .svg {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  z-index: 1;
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	z-index: 1;
 }
 
 .ripple {
-  fill: rgba(255,255,255,0.3);
+	fill: @COLOR-White;
+	fill-opacity: 0.3;
 }
