Endless side slider
Could do with some work (especially cleaning up) but a pretty good
start.

--- a/content/_partials/ALLOY_scripts.hbs
+++ b/content/_partials/ALLOY_scripts.hbs
@@ -45,6 +45,15 @@
 		});
 
 	});
+
+	require(["endlessslider"], function() {
+		$(".endless-slider").endlessslider({
+            autoSpeed: -2.5,
+            hoverSpeed: 0,
+            buttonSpeed: -5,
+            acceleration: 0.05
+		});
+	})
 </script>
 {{/if}}
 
