--- a/assets/less/base_modules/sideslider.less
+++ b/assets/less/base_modules/sideslider.less
@@ -17,4 +17,25 @@
 
 	}
 
+	.endless-slider {
+
+		//background-color: purple;
+
+		ul {
+         	list-style: none;
+         	padding: 0;
+
+         	li {
+				width: 350px;
+				margin-bottom: 10px;
+				margin-right: 10px;
+				float: left;
+
+				&.clone {
+					//background-color: red;
+				}
+			}
+		}
+	}
+
 } .sidesider-styles();
