--- a/content/Alloy/Components/side-sliders.hbs
+++ b/content/Alloy/Components/side-sliders.hbs
@@ -41,6 +41,19 @@ js-sideslider: true
 
 		        </section>
 
+				<section class="section section--example">
+		            <header class="section__head">
+		                <h2 class="section__title">Example</h2>
+		            </header>
+
+		            <div class="section__body">
+				        <!-- code -->
+						{{> endlessslider sideslider }}
+				        <!-- end of code -->
+			        </div>
+
+		        </section>
+
 <!-- code -->
 
 		    	<section class="section section--code">
