--- a/assets/less/base/debug.less
+++ b/assets/less/base/debug.less
@@ -1,4 +1,8 @@
-.debugger-styles() when not (@DEBUGGER) { }
+.debugger-styles() when not (@DEBUGGER) {
+	.debugger {
+		display: none;
+	}
+}
 .debugger-styles() when (@DEBUGGER) {
 
 @DEBUG-Anim:                    @ANIM-Curve;
