--- a/content/_layouts/startup.hbs
+++ b/content/_layouts/startup.hbs
@@ -27,9 +27,7 @@ js-stage: true
 
 <body id="{{{app.siteclass}}}"  class="m{{#if page.class-master }} m--{{page.class-master }} {{/if}}">
 
-    <!--[if lt IE 8]>
-        <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/" target="_blank">upgrade your browser</a> to improve your experience.</p>
-    <![endif]-->
+	{{> browsehappy }}
 
     <div class="stage">
         <div class="stage__page">
@@ -66,5 +64,6 @@ js-stage: true
     {{> ALLOY_scripts }}
     {{> ALLOY_jsonld }}
 
+    <div id="mediaquery"></div>
 </body>
 </html>
