--- a/content/_partials/ALLOY_headscripts.hbs
+++ b/content/_partials/ALLOY_headscripts.hbs
@@ -4,6 +4,7 @@
 
 <!-- IE8 and below fallbacks -->
 <!--[if lt IE 9]>
+    <link rel="stylesheet" href="{{ assets }}/css/ie8.css" />
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <script type="text/javascript" src="{{ assets }}/js/libs/respond/respond.min.js"></script>
 <![endif]-->
