--- a/content/_layouts/default.hbs
+++ b/content/_layouts/default.hbs
@@ -3,7 +3,7 @@
 <!--[if IE 9]> <html class="no-js ie ie9" lang="en" prefix="og: http://ogp.me/ns#"> <![endif]-->
 <!--[if gt IE 8]><!--> <html class="no-js" lang="en" prefix="og: http://ogp.me/ns#"> <!--<![endif]-->
 <head itemscope itemtype="http://schema.org/WebSite">
-    <meta charset="UTF-8">
+    <meta charset="utf-8">
 
     <title>{{ page.title }} - {{ app.title }}</title>
 
@@ -34,6 +34,7 @@
 
     <!-- IE8 and below fallbacks -->
     <!--[if lt IE 9]>
+    <link rel="stylesheet" href="{{ assets }}/css/ie8.css" />
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <script type="text/javascript" src="{{ assets }}/js/libs/respond/respond.min.js"></script>
     <![endif]-->
@@ -42,13 +43,12 @@
 
 <body id="{{{app.siteclass}}}"  class="m{{#if page.class-master }} m--{{page.class-master }} {{/if}}">
 
-    <!--[if lt IE 8]>
-        <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/" target="_blank">upgrade your browser</a> to improve your experience.</p>
-    <![endif]-->
+	{{> browsehappy }}
 
     {{> body }}
 
     <!-- <div class="modal__mask modal__mask--visible"></div> -->
 
+    <div id="mediaquery"></div>
 </body>
 </html>
